# accmat

./: CMakeLists.txt  README.md  ford.md
api/: CMakeLists.txt  dict.f90  fbuf.f90  molds.f90
example/: CMakeLists.txt  dict_demo.f90  dict_operators.f90  dot_product.f90  lin_solve.f90  vector_add.f90
lib/: CMakeLists.txt  dict_mod.f90  fbuf_mod.f90
